tarpc/tests/compile_fail/tarpc_service_fn_new.rs
#![allow(incomplete_features)]
#![feature(generic_associated_types)]

#[tarpc::service]
trait World {
    async fn new();
}

fn main() {}
